--- a/src/pages/train/[id]/trainDetail.module.css
+++ b/src/pages/train/[id]/trainDetail.module.css
@@ -41,3 +41,33 @@
   gap: 24px;
   padding: 12px 0px;
 }
+.casesRow {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  padding: 24px 0px;
+  margin-bottom: -36px;
+}
+
+.casePill {
+  padding: 6px 24px;
+  border-radius: 24px;
+  background-color: rgba(220, 220, 220, 0.5);
+  backdrop-filter: blur(8px);
+  cursor: pointer;
+}
+
+.casePill:hover {
+  background-color: rgba(235, 235, 235, 0.7);
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.09);
+}
+
+.casePill.selected {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.09);
+}
+
+.casePill.selected:hover {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.16);
+}
